# RayTracing-CEP2021

./: ;  CMakeLists.txt  README.md
.github/workflows/: cpplint.yml  msbuild.yml
app/: CMakeLists.txt  ImagePart.cc  RenderingApp.cc
app/command/: CloseCommand.cc
doc/: 中期报告.md  中期报告1.1.md  修复的问题.txt  第一轮迭代流程.txt  第一轮迭代流程1.1.txt  第七轮迭代流程.txt  第三轮迭代流程.txt  第二次迭代流程.txt  第五轮迭代流程.txt  第八轮迭代流程.txt  第六轮迭代流程.txt  第四轮迭代流程.txt  需求分析.txt  项目成果和总结.md  项目说明.md
src/: CMakeLists.txt  main.cc  precomp.hpp
src/app/: CMakeLists.txt  ImagePart.cc  ImagePart.h  RenderingApp.cc  RenderingApp.h
src/app/command/: CloseCommand.cc  ErrorHandlingCommand.cc
src/common/: Bmp.hpp  CMakeLists.txt  Image.hpp  Property.hpp  Scene.hpp  Vector.hpp
src/model/: CMakeLists.txt  RenderModel.cc  RenderModel.hpp  Renderer.cc  Renderer.hpp  TextModel.cc  TextModel.h
src/model/algorithm/: Bmp.hpp  Renderer.cc  Renderer.hpp  Scene.hpp  Vector.hpp  Vector.sample.txt
src/src/: CMakeLists.txt
src/src/app/command/: ErrorHandlingCommand.cc
src/src/model/: CMakeLists.txt  RenderModel.hpp
src/src/model/algorithm/: Bmp.hpp  Renderer.hpp
src/src/view/: CMakeLists.txt  ImageView.h
src/src/viewmodel/: RenderViewModel.cc  RenderViewModel.hpp
src/src/window/: CMakeLists.txt  MessageDialog.h
src/view/: CMakeLists.txt  ImageView.cc  ImageView.h  Input.cc  Input.h  ProgressBar.cc  ProgressBar.h  TextView.cc  TextView.h  changes.txt  cmake_install.cmake
src/viewmodel/: CMakeLists.txt  RenderViewModel.cc  RenderViewModel.hpp  TextViewModel.cc  TextViewModel.h
src/window/: CMakeLists.txt  MainWindow.cc  MainWindow.h  MainWindowNotification.cc  MessageDialog.cc  MessageDialog.h  changes.txt
