INCLUDE_DIRECTORIES(
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${PROJECT_SOURCE_DIR}/src"
)

SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_BINARY_DIR}/bin")
SET(SRC_PCH_LIST "precomp.cc")
SET(SRC_LIST
  "main.cc"
)

ADD_EXECUTABLE(RayTracing ${SRC_PCH_LIST} ${SRC_LIST})

SET_PCH(RayTracing "exe" "precomp.hpp" ${SRC_PCH_LIST} ${SRC_LIST})

SET_TARGET_PROPERTIES(RayTracing PROPERTIES
	OUTPUT_NAME "RayTracing"
	LINK_FLAGS "${STRING_LINK_FLAGS_TARGET}"
)

TARGET_LINK_LIBRARIES(RayTracing ${STRING_CSL_LIBS} ${STRING_FLTK_LIBS} ${STRING_LINK_EXTRA_LIBS})
